@@ -1,3 +1,7 @@
+2013-08-02  Caroline Tice  <cmtice@google.com>
+
+	* vtv-change-permission.h: New file.
+
 2013-08-05  Eric Botcazou  <ebotcazou@adacore.com>
             Konrad Eisele  <konrad@gaisler.com>
 
